@@ -412,16 +412,24 @@ $ #Команды управления панелями#
 ~деревом каталогов~@TreePanel@ или ~информационной панелью~@InfoPanel@, то каталог
 меняется не на активной, а на пассивной панели.
 
- Поместить помеченные имена в Буфер Обмена                 #Ctrl+Ins#
- (при пустой командной строке)
- Поместить помеченные файлы в Буфер Обмена          #Ctrl+C, RCtrl+C#
- (без учёта состояния командной строки)
- Поместить помеченные имена в Буфер Обмена           #Ctrl+Shift+Ins#
- (без учёта состояния командной строки)
- Поместить помеченные полные имена в Буфер Обмена     #Alt+Shift+Ins#
- (без учёта состояния командной строки)
- Поместить сетевые (UNC) имена помеченных файлов       #Ctrl+Alt+Ins#
- в Буфер Обмена (без учёта состояния командной строки)
+ #Ctrl+Ins#
+ Поместить помеченные имена в Буфер Обмена (при пустой командной строке).
+
+ #Ctrl+Shift+Ins#
+ Поместить помеченные имена в Буфер Обмена.
+
+ #Alt+Shift+Ins#
+ Поместить помеченные полные имена в Буфер Обмена.
+
+ #Ctrl+Alt+Ins#
+ Поместить реальные имена помеченных файлов в Буфер Обмена.
+
+
+ #Ctrl+Shift+C#
+ Поместить помеченные файлы в Буфер Обмена.
+
+ #Ctrl+Shift+X#
+ Вырезать помеченные файлы в Буфер Обмена.
 
  При копировании имён файлов с панели в буфер обмена скопированные файлы могут быть вставлены в других приложениях (Проводник и т.п.).
 
